# skilldoctor

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml
docs/: anti-patterns.md  architecture.md  diagnostic_categories.md  quickstart.md  runtime_contract.md  self_audit_case_study.md
docs/evidence/: self_audit_2026-06-23.md
documents/: skill-template.md  skilldoctor-implementation-plan.md
evals/: README.md
evals/scenarios/: bad_skill.md
examples/bad-skill/: SKILL.md
examples/good-skill/: SKILL.md
examples/skilldoctor-self-audit/: remediation_tasks.md  run_manifest.json  skill_report.md  suggested_patch.md
protocols/: audit.md  close.md  handoff.md  recover.md  validate.md
schemas/: diagnostic_record.schema.json  run_manifest.schema.json
skills/skill-doctor/: SKILL.md
skills/skill-doctor/references/: diagnostic_categories.md  output_contract.md
spec/: SPEC.md  invariants.md  lifecycle.md  ownership-model.md  threat-model.md  validation-model.md
src/skill_doctor/: __init__.py  audit.py  cli.py  diagnostics.py  infer_contract.py  ingest.py  parse_markdown.py  render_report.py  risk_scoring.py  run_manifest.py  schemas.py
tests/: test_cli_audit.py  test_diagnostics.py  test_parse_markdown.py  test_schema_validation.py
workflows/: skill_audit.yml
wrappers/codex/: SKILL.md  project-instructions-snippet.md  prompt-wrapper.md  runtime-capabilities.md
