[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-doctor"
version = "0.1.0"
description = "Deterministic audits for Markdown agent skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "SkillDoctor maintainers" }
]
keywords = ["agent", "skills", "static-analysis", "markdown"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
skill-doctor = "skill_doctor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
testpaths = ["tests"]
